terminamos todo en teoria